--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@500&display=swap');
+
 #main-navbar {
-	/*background-color: blue;*/
 	overflow: hidden;
 }
 
@@ -23,6 +24,7 @@
 	position: relative;
 	right: 50%;
 	display: block;
+	
 }
 
 #navbar-container ul li a {
@@ -31,47 +33,65 @@
 	color: #6fd2ff;
 	text-decoration: none;
 	font-weight: bold;
+	font-family: Inter;
 }
 
 #navbar-container ul li a:hover {
 	background-color: #19313c;
 	border-radius: 5px;
+	border-left-style: solid;
+	border-left-width: 5px;
+	border-left-color: red;
 }
-
-/*#navbar-container ul li a:visited {
-	color: blue;
-}*/
 
 body{
 	background-color: #102832;
-	/*padding: 5px 25px 10px 5px;*/
 	padding: 0% 7%;
-
 }
 
 p {
 	color: #e5e5e5;
-	font-family: Elena;
+	font-family: Arial;
 	font-size: 22px;
-	/*padding: 0% 7%;*/
 }
 
 h1 {
 	color: #e5e5e5;
-	font-family: Elena;
+	font-family: Helvetica;
+	border-left-style: solid;
+	border-left-color: red;
+	border-top-left-radius: 3px;
+	padding-left: 10px;
 }
 
 h2 {
 	color: #e5e5e5;
-	font-family: Elena;
+	font-family: Helvetica;
+	border-left-style: solid;
+	border-left-color: red;
+	border-top-left-radius: 3px;
+	border-bottom-left-radius: 3px;
+	border-bottom-left-radius: 1px;
+	padding-left: 10px;
 }
 
 h3 {
 	color: #e5e5e5;
-	font-family: Elena;
+	font-family: Helvetica;
+	border-left-style: solid;
+	border-left-color: red;
+	border-bottom-left-radius: 3px;
+	border-bottom-left-radius: 1px;
+	padding-left: 10px;
 }
 
 #resume li {
 	color: #e5e5e5;
-	font-family: Elena;
+	font-family: Arial;
+}
+
+
+#resume_divider {
+	border: 1px solid red;
+	border-radius: 1px;
 }
