--- a/css/style.css
+++ b/css/style.css
@@ -53,6 +53,7 @@ p {
 	color: #e5e5e5;
 	font-family: Arial;
 	font-size: 22px;
+	line-height: 1.5em;
 }
 
 h1 {
@@ -94,3 +95,27 @@ h3 {
 	border: 1px solid red;
 	border-radius: 1px;
 }
+
+#img_left {
+	float: left;
+	padding: 5%;
+	clear: left;
+	border: 10px solid black;
+	border-radius: 25px;
+}
+
+#img_right{
+	float: right;
+	padding: 5%;
+	clear: right;
+}
+
+#text-right{
+	text-align: right;
+	padding-left: 10px;
+}
+
+/*#pet_images {
+	padding-left: 15%;
+	padding-right: 15%;
+}*/
